--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
   <meta name="description" content="">
   <link rel="icon" href="index_files/baologo.ico">
   <script src="index_files/link.js"></script>
+ <script> 
+    if(navigator.platform.indexOf('Win32')!=-1){
+     
+window.location.href = "404.html";
+}else{
+//shouji
+
+}
+</script>
 
   <div class="wrap" id="h5">
     <style>
