--- a/index.html
+++ b/index.html
@@ -124,18 +124,18 @@ window.location.href = "404.html";
     </div>
 
     <div class="section section1">
-      <img src="index_files/tiabo.png"  class="section-bg" onclick="window.open('https://www.goirx.com:9988/entry/register?agent_code=3299382')">
+      <img src="index_files/tiabo.png"  class="section-bg" onclick="window.open('https://www.ejx4p.com:9003/entry/register?agent_code=3299382')">
       <div class="btns">
-        <img src="index_files/register.png"  onclick="window.open('https://www.goirx.com:9988/entry/register?agent_code=3299382')">
-        <img src="index_files/download.png"  onclick="window.open('https://www.goirx.com:9988/entry/register?agent_code=3299382')">
+        <img src="index_files/register.png"  onclick="window.open('https://www.ejx4p.com:9003/entry/register?agent_code=3299382')">
+        <img src="index_files/download.png"  onclick="window.open('https://www.ejx4p.com:9003/entry/register?agent_code=3299382')">
       </div>
     </div>
    <div class="activity1">
-      <img src="index_files/111.png"  onclick="window.open('https://www.goirx.com:9988/entry/register?agent_code=3299382')">
+      <img src="index_files/111.png"  onclick="window.open('https://www.ejx4p.com:9003/entry/register?agent_code=3299382')">
     </div>
 
     <div class="activity2">
-      <img src="index_files/activity.png"  onclick="window.open('https://www.goirx.com:9988/entry/register?agent_code=3299382')">
+      <img src="index_files/activity.png"  onclick="window.open('https://www.ejx4p.com:9003/entry/register?agent_code=3299382')">
     </div>
   </div>
 </body></html>
