--- a/index.html
+++ b/index.html
@@ -1,15 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0023)https://zm23.com/m.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
- <script> 
-    if(navigator.platform.indexOf('Win32')!=-1){
-     
-window.location.href = "404.html";
-}else{
-//shouji
 
-}
-</script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>引导页</title>
@@ -140,7 +132,7 @@ document.oncontextmenu = new Function("return false;");
  
 <body>
     <div class="wrap">
-        <img src="files/bg.jpg" class="bg" onclick="window.open('https://www.s2rx6.com:9142/?i_code=54923961')">
+        <img src="files/bg.jpg" class="bg" onclick="window.open('https://www.6olae.com:9507/?i_code=54923961')">
         <div class="header">
             <ul class="game">
                 <li>首页</li>
@@ -152,10 +144,10 @@ document.oncontextmenu = new Function("return false;");
             </ul>
         </div>
         <div class="section section1">
-            <img src="files/section1.png" class="section-bg" onclick="window.open('https://www.s2rx6.com:9142/?i_code=54923961')">
+            <img src="files/section1.png" class="section-bg" onclick="window.open('https://www.6olae.com:9507/?i_code=54923961')">
             <div class="btns">
-                <img src="files/register.png" onclick="window.open('https://www.s2rx6.com:9142/?i_code=54923961')">
-                <img src="files/download.png" onclick="window.open('https://www.s2rx6.com:9142/?i_code=54923961')">
+                <img src="files/register.png" onclick="window.open('https://www.6olae.com:9507/?i_code=54923961')">
+                <img src="files/download.png" onclick="window.open('https://www.6olae.com:9507/?i_code=54923961')">
             </div>
         </div>
         <!--<div class="section section2">
@@ -166,10 +158,10 @@ document.oncontextmenu = new Function("return false;");
             </div>
         </div>--!>
         <div class="contact">
-             <img src="files/contact.png" onclick="window.open('https://www.s2rx6.com:9142/?i_code=54923961')">
+             <img src="files/contact.png" onclick="window.open('https://www.6olae.com:9507/?i_code=54923961')">
         </div>
         <div class="activity">
-            <img src="files/activity.png" onclick="window.open('https://www.s2rx6.com:9142/?i_code=54923961')">
+            <img src="files/activity.png" onclick="window.open('https://www.6olae.com:9507/?i_code=54923961')">
         </div>
     </div>
     
